Fri Apr 19 21:55:40 2013  Kouhei Sutou  <kou@cozmixng.org>

	* README.EXT.ja (Data_Wrap_Struct): Remove a description about
	  orphan argument. Oh, I renamed the argument name without
	  changing description at r36180... Sorry....
	  Patch by Makoto Kishimoto. Thanks!!! [ruby-dev:47269] [Bug #8292]
	* README.EXT.ja (Data_Make_Struct): Add a sample code that describes
	  how it works.
	  Patch by Makoto Kishimoto. Thanks!!! [ruby-dev:47269] [Bug #8292]

Fri Apr 19 17:54:57 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (body_type_msg): should accept
	  message/delivery-status with extra data.
	  [ruby-core:53741] [Bug #8167]

	* test/net/imap/test_imap_response_parser.rb: related test.

Fri Apr 19 13:03:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object): do not dump encoding which is dumped with
	  marshal_dump data.  [ruby-core:54334] [Bug #8276]

Fri Apr 19 11:36:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (stack_protector): control use of -fstack-protector.

	* configure.in (debugflags): let -fstack-protector precede and disable
	  debugflags, because they can't work together on SmartOS.  [Bug #8268]

Fri Apr 19 07:43:52 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/openssl/test_cipher.rb: Correct a typo
	  by jgls <joerg@joergleis.com>
	  https://github.com/ruby/ruby/pull/291 fix GH-291

Thu Apr 18 16:58:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_mod_public_method): fix visibility on anonymous
	  module. set visibility of singleton method, not method in base
	  class.  [ruby-core:54404] [Bug #8284]

Thu Apr 18 16:20:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): should skip dot directories only for recursion,
	  but should not if matching to the given pattern.  [ruby-core:54387]
	  [Bug #8283]

Thu Apr 18 16:20:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_unpack): increase buffer size to fix buffer overflow,