@@ -1,3 +1,15 @@
+Sat Apr 20 02:33:27 2013  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (str_scrub): add ruby method String#scrub which verify and
+	  fix invalid byte sequence. [ruby-dev:45975] [Feature #6752]
+
+	* string.c (str_compat_and_valid): check given string is compatible
+	  and valid with given encoding.
+
+	* transcode.c (str_transcode0): If invalid: :replace is specified for
+	  String#encode, replace invalid byte sequence even if the destination
+	  encoding equals to the source encoding.
+
 Fri Apr 19 21:55:40 2013  Kouhei Sutou  <kou@cozmixng.org>
 
 	* README.EXT.ja (Data_Wrap_Struct): Remove a description about
